# X500-search-and-rescue

./: README.md
drone_camera/: CMakeLists.txt  package.xml
drone_camera/include/drone_camera/: drone_camera.hpp
drone_camera/src/: drone_camera.cpp
drone_interfaces/: CMakeLists.txt  package.xml
drone_search_and_rescue/: CMakeLists.txt  package.xml
drone_search_and_rescue/include/drone_search_and_rescue/: offboard_control.hpp
drone_search_and_rescue/src/: offboard_control.cpp
